--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             <!-- Card do Filme 1 -->
             <div class="movie-item">
                 <img src="https://via.placeholder.com/200x300" alt="Poster do Filme 1">
-                <h3>Filme 1</h3>
+                <h3>piratas do caribe 1</h3>
                 <p>Aventura, Ação</p>
-                <p>2023</p>
+                <p>1995</p>
             </div>
             <!-- Card do Filme 2 -->
             <div class="movie-item">
